--- a/labs/test.ipynb
+++ b/labs/test.ipynb
@@ -89,29 +89,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'事件': 0,\n",
-       " '故障': 0,\n",
-       " 'PM': 0,\n",
-       " '告警': 0,\n",
-       " '变更': 2,\n",
-       " '变更评审': 2,\n",
-       " '主动运维': 23,\n",
-       " 'FAQ': 0,\n",
-       " '负向事件': 0}"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
