添加手动调整指定月份，修改Readme.md，修复bug：无法存储多月份的统计信息 V 1.0.1

--- a/labs/smart1.ipynb
+++ b/labs/smart1.ipynb
@@ -66,27 +66,23 @@
     "def retrieve_name(var):\n",
     "    return [var_name for var_name, var_val in inspect.currentframe().f_globals.items() if var_val == var]\n",
     "\n",
-    "def copy_dict_from(source_dict:dict):\n",
+    "\n",
+    "def copy_dict_from(source_dict: dict):\n",
     "    target_dict = collections.defaultdict(int)\n",
-    "    if(isinstance(source_dict, dict)):\n",
+    "    if isinstance(source_dict, dict):\n",
     "        for i in source_dict.keys():\n",
     "            target_dict[i] = 0\n",
     "    return target_dict\n",
     "\n",
-    "# def init(config_path):\n",
-    "#     config.read(config_path,encoding='UTF-8')\n",
-    "#     config_dict = dict(config.items('smartwork'))\n",
-    "#     smart_dict =  copy_dict_from(config_dict)\n",
-    "#     keys_list = config_dict.values()\n",
-    "#     return smart_dict,keys_list\n",
     "\n",
-    "def do_count(smart_dict,path):\n",
-    "    if('.txt' not in path):\n",
+    "def do_count(smart_dict, path):\n",
+    "    if '.txt' not in path:\n",
     "        return None\n",
-    "    file = open(path,'r',encoding='UTF-8')\n",
-    "    def verify(keys_list,line):\n",
+    "    file = open(path, 'r', encoding='UTF-8')\n",
+    "\n",
+    "    def verify(keys_list, line):\n",
     "        for i in keys_list:\n",
-    "            if(retrieve_name(i)[0] not in smart_dict):\n",
+    "            if retrieve_name(i)[0] not in smart_dict:\n",
     "                smart_dict[retrieve_name(i)[0]] = 0\n",
     "            if line.find(i) != -1:\n",
     "                return retrieve_name(i)[0]\n",
@@ -94,26 +90,31 @@
     "        # print(1)\n",
     "        res = verify(keys_list, line)\n",
     "        if res:\n",
-    "            smart_dict[res] +=1\n",
+    "            smart_dict[res] += 1\n",
     "    return smart_dict\n",
+    "\n",
     "\n",
     "def to_excel(smart_dict):\n",
     "    try:\n",
-    "        df = pd.DataFrame([smart_dict.values()], columns=[i.replace('【','').replace('】','') for i in keys_list])\n",
-    "        df.to_excel('{}\\\\{}交付件.xlsx'.format(REPORT_FOLDER,current_year), sheet_name='{}月'.format(int(time.strftime('%m',time.localtime()))))\n",
+    "        df = pd.DataFrame([smart_dict.values()], columns=[\n",
+    "                          i.replace('【', '').replace('】', '') for i in keys_list])\n",
+    "        df.to_excel('{}\\\\{}交付件.xlsx'.format(REPORT_FOLDER, current_year),\n",
+    "                    sheet_name='{}月'.format(int(time.strftime('%m', time.localtime()))))\n",
     "    except:\n",
     "        print(\"导出失败，不存在目录或文件正在被使用。\")\n",
-    "        \n",
+    "\n",
+    "\n",
     "def traverse():\n",
-    "    current_year_and_month = time.strftime(\"%Y%m\",time.localtime())\n",
-    "    current_year = time.strftime(\"%Y\",time.localtime())\n",
+    "    current_year_and_month = time.strftime(\"%Y%m\", time.localtime())\n",
+    "    current_year = time.strftime(\"%Y\", time.localtime())\n",
     "    smart_dict = collections.defaultdict(int)\n",
     "    for dirname in os.listdir(BASE_FOLDER):\n",
-    "        dirpath = '{}\\\\{}'.format(BASE_FOLDER,dirname)\n",
+    "        dirpath = '{}\\\\{}'.format(BASE_FOLDER, dirname)\n",
     "        if current_year_and_month in dirname and os.path.isdir(dirpath):\n",
     "            for report in os.listdir(dirpath):\n",
-    "                if('.txt' in report):\n",
-    "                    file_path = '{}\\\\{}'.format(dirpath,report).replace('\\\\', '\\\\\\\\')\n",
+    "                if '.txt' in report:\n",
+    "                    file_path = '{}\\\\{}'.format(\n",
+    "                        dirpath, report).replace('\\\\', '\\\\\\\\')\n",
     "                    # print(file_path)\n",
     "                    smart_dict = do_count(smart_dict, file_path)\n"
    ]
