新增同时导出交付件功能 V1.1.0

--- a/labs/test.ipynb
+++ b/labs/test.ipynb
@@ -89,13 +89,275 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'222'"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import os\n",
+    "import re\n",
+    "from datetime import datetime\n",
     "\n",
-    "    "
+    "_re = '.*工作日报(\\d+).txt'\n",
+    "ss = \"file_path D:\\\\\\\\workspace\\\\20221005周三\\\\工作日报20221005.txt\"\n",
+    "r = re.match(_re, ss)\n",
+    "t = r.group(1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 181,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = \" 1.  【主动运维】论坛指标例行巡检\"\n",
+    "ss =\"-      1. HIS-internet-sgp-consumer-external-consumer，并发连接21433>14000\"\n",
+    "sss = \"研究新加坡云鉴权: 调用接口，需要在cookies中有J_SESSION_ID businessKey 两个字段。流程：\"\n",
+    "a = re.sub('\\d{1,2}\\.', '', s).strip()==''\n",
+    "a\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "file = open('D:\\\\\\\\workspace\\\\20220902周五 快速导出cce清单脚本,下午请假\\\\工作日报20220902.txt', 'r', encoding='UTF-8')\n",
+    "for _i,i in enumerate(file):\n",
+    "    print(_i,file.readlines())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2022/02/02\n",
+      " 1.  【告警】查看新加坡华为云CBG-官网 elb的一处告警。\n"
+     ]
+    }
+   ],
+   "source": [
+    "d = {}\n",
+    "ss= '2022/02/02'\n",
+    "d[ss] = [1,2,3,4]\n",
+    "d[ss].append([44])\n",
+    "d[s] = 11\n",
+    "for _i,i in enumerate(d):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['论坛指标例行巡检\\n', '论坛指标例行巡检\\n', '主动运维', '2022/10/04', 2, '', '']\n",
+      "['德电生产的 scrm 的 mycat，查询数据量异常：\\n', '德电生产的 scrm 的 mycat，查询数据量异常：\\n', '主动运维', '2022/10/04', 2, '', '']\n",
+      "['编写运维相关shell脚本，学习linux命令相关的知识，学习正则表达式。\\n', '编写运维相关shell脚本，学习linux命令相关的知识，学习正则表达式。\\n', '主动运维', '2022/10/04', 2, '- 检查德电mycat配置\\n- 初步认为/appHome/mycat/conf/server.xml 中的 memoryPageSize配置有问题，当前的配置值为64K，但应为1M (待确认)\\n', '']\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = {'论坛指标例行巡检\\n': ['论坛指标例行巡检\\n', '论坛指标例行巡检\\n', '主动运维', '2022/10/04', 2, '', ''], '德电生产的 scrm 的 mycat，查询数据 量异常：\\n': ['德电生产的 scrm 的 mycat，查询数据量异常：\\n', '德电生产的 scrm 的 mycat，查询数据量异常：\\n', '主动运维', '2022/10/04', 2, '', ''], '编写 运维相关shell脚本，学习linux命令相关的知识，学习正则表达式。\\n': ['编写运维相关shell脚本，学习linux命令相关的知识，学习正则表达式。\\n', '编写运维相关shell脚本，学习linux命令相关的知识，学习正则表达式。\\n', '主动运维', '2022/10/04', 2, '- 检查德电mycat配置\\n- 初步认为/appHome/mycat/conf/server.xml 中的 memoryPageSize配置有问题，当前的配置值为64K，但应为1M (待确认)\\n', '']}\n",
+    "for i in a.values():\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['论坛指标例行巡检\\n', '主动运维', '2022/10/04', 2, '']\n",
+      "['德电生产的 scrm 的 mycat，查询数据量异常：\\n', '主动运维', '2022/10/04', 2, '']\n",
+      "['编写运维相关shell脚本，学习linux命令相关的知识，学习正则表达式。\\n', '主动运维', '2022/10/04', 2, '- 检查德电mycat配置\\n- 初步认为/appHome/mycat/conf/server.xml 中的memoryPageSize配置有问题，当前的配置值为64K，但应为1M (待确认)\\n']\n"
+     ]
+    }
+   ],
+   "source": [
+    "d = {'论坛指标例行巡检\\n': ['主动运维', '2022/10/04', 2, ''], '德电生产的 scrm 的 mycat，查询数据量异常：\\n': ['主动运维', '2022/10/04', 2, ''], '编写运维相关shell脚本，学习linux命令相关的知识，学习正则表达式。\\n': ['主动运维', '2022/10/04', 2, '- 检查德电mycat配置\\n- 初步认为/appHome/mycat/conf/server.xml 中的memoryPageSize配置有问题，当前的配置值为64K，但应为1M (待确认)\\n']}\n",
+    "for i,t in d.items():\n",
+    "    t.insert(0,i)\n",
+    "for i in d.values():\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "- 检查德电mycat配置\n",
+      "- 初步认为/appHome/mycat/conf/server.xml 中的 memoryPageSize配置有问题，当前的配置值为64K，但应为1M (待确认)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "a =  ['- 检查德电mycat配置\\n',\n",
+    "   '- 初步认为/appHome/mycat/conf/server.xml 中的 memoryPageSize配置有问题，当前的配置值为64K，但应为1M (待确认)\\n']\n",
+    "b = ''.join(a)\n",
+    "print('{}'.format(''.join(a)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'C': 11, 'Java': 22, 'Python': 33, 'a': 44}\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = {'C': 11, 'Java': 22}\n",
+    "y = {'Python': 33, 'a': 44}\n",
+    "x = {**x, **y}\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import re\n",
+    "aa = '【主动运维】更新 新加坡机器升级清单(club,forum)\\n'\n",
+    "re.sub('【.*】', '', aa)\n",
+    "a = [1,2]\n",
+    "b = []\n",
+    "b.extend([[] for i in range(len(a))])\n",
+    "[i for i in range(10)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'A'"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = ['亚太9.9大促巡检：\\n', '主动运维', '2022/09/01', 2, '◊ 9 月 1 日亚太大促 IT 保障&监控巡检报告\\n◊ iforum、itrinity redis&mysql监控\\n◊ 修改《华为论坛新加坡架构图》一处错误。\\n']\n",
+    "b = [1,2,3,4,5]\n",
+    "''.join(map(str, a))\n",
+    "chr(65)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'快速导出cce清单脚本'"
+      ]
+     },
+     "execution_count": 174,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = '1. 【告adsad】查看新加坡华为云CBG-官网 elb的一处告警。'\n",
+    "ss = '1. 【告adsad】快速导出cce清单脚本.'\n",
+    "sss ='1.【主.运维】编写动化脚本'\n",
+    "re.sub(r'\\d\\.?(.*】)?(.*\\w)[\\.:：。]?', r'\\2', ss)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\"[{\\\\\"from\\\\\":1,\\\\\"price\\\\\":1324,\\\\\"priceFormat\\\\\":\\\\\"1,324\\\\\",\\\\\"to\\\\\":9999}]\"'"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = '\"[{\\\\\"from\\\\\":1,\\\\\"price\\\\\":1,324,\\\\\"priceFormat\\\\\":\\\\\"1,324\\\\\",\\\\\"to\\\\\":9999}]\"'\n",
+    "re.sub(\"(:\\d+)(,)(\\d+)\",r'\\1\\3',s)\n"
    ]
   }
  ],
