--- a/labs/test.ipynb
+++ b/labs/test.ipynb
@@ -359,6 +359,53 @@
     "s = '\"[{\\\\\"from\\\\\":1,\\\\\"price\\\\\":1,324,\\\\\"priceFormat\\\\\":\\\\\"1,324\\\\\",\\\\\"to\\\\\":9999}]\"'\n",
     "re.sub(\"(:\\d+)(,)(\\d+)\",r'\\1\\3',s)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['变更', '', 'CBG Myhuawei', 'forum', 'op']"
+      ]
+     },
+     "execution_count": 189,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import re\n",
+    "test = ' 1.  【变更】【BS:CBG Myhuawei[forum-op]】海外社区实施变更'\n",
+    "test2 = ' - dafsdfdsf.sd f sdfsfsadf 【士大夫十分】阿斯弗安抚发放'\n",
+    "a = re.sub(r'.*【(\\w*)-?(\\w*)】【BS[:：]?([\\w\\s?]*)\\[?(\\w*)-?(\\w*)\\]?】.*', r'\\1#\\2#\\3#\\4#\\5', test)\n",
+    "# a.split('#')\n",
+    "a.split('#')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 187,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 5, 3, 4]"
+      ]
+     },
+     "execution_count": 187,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = [1,2,3,4]\n",
+    "a.insert(2, 5)\n",
+    "a"
+   ]
   }
  ],
  "metadata": {
