修改文本匹配算法，匹配备注，调整文档格式 V1.2.1

--- a/labs/test.ipynb
+++ b/labs/test.ipynb
@@ -362,49 +362,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['变更', '', 'CBG Myhuawei', 'forum', 'op']"
+       "['告警、监控、巡检', '', 'CBG Myhuawei', '', 'op', '新建codehub 仓库，提交sg-auto version 1']"
       ]
      },
-     "execution_count": 189,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "\n",
     "import re\n",
     "test = ' 1.  【变更】【BS:CBG Myhuawei[forum-op]】海外社区实施变更'\n",
     "test2 = ' - dafsdfdsf.sd f sdfsfsadf 【士大夫十分】阿斯弗安抚发放'\n",
-    "a = re.sub(r'.*【(\\w*)-?(\\w*)】【BS[:：]?([\\w\\s?]*)\\[?(\\w*)-?(\\w*)\\]?】.*', r'\\1#\\2#\\3#\\4#\\5', test)\n",
-    "# a.split('#')\n",
-    "a.split('#')\n"
+    "t3 = ' 5. 【告警、监控、巡检】【BS:CBG Myhuawei[-op]】9.09大促巡检。'\n",
+    "t4 = '  4. 【告警、监控、巡检】【BS:CBG Myhuawei[-op]】新建codehub 仓库，提交sg-auto version 1'\n",
+    "t5 = ' 1. 【资源管理】【BS:CBG Myhuawei[服务化中台-op]】  '\n",
+    "a = re.sub(r'^.*【([\\w、]*)-?(\\w*)】【BS:([\\w\\s?]*)\\[?(\\w*)-?(\\w*)\\]?】(.*)', r'\\1#\\2#\\3#\\4#\\5#\\6', t4.strip())\n",
+    "a.split('#')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1, 2, 5, 3, 4]"
+       "'E'"
       ]
      },
-     "execution_count": 187,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a = [1,2,3,4]\n",
-    "a.insert(2, 5)\n",
-    "a"
+    "t5 = '修改机器清单一处错误'\n",
+    "a = re.sub(r'(\\w*)[\\.:：。\\?？]?', r'\\1',t5)\n",
+    "a\n",
+    "chr(ord('C')+2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 33, 4]"
+      ]
+     },
+     "execution_count": 146,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "aa = '\t** 项目路径：https://codehub-g.huawei.com/aWX1192780/sg-auto/home。'\n",
+    "aa = '** 项目路径：https://codehub-g.huawei.com/aWX1192780/sg-auto/home。'\n",
+    "b = re.search(r'^\\*\\*[\\s]*(.*)', aa.strip()).group(1)\n"
    ]
   }
  ],
