新增：自动生成每日工作目录(由bat脚本迁移过来) 新增：根据dict导出项国家列 新增：解决文件编码不统一问题，检查文件编码，修改文件编码为UTF-8 修复：问题描述列相同会出现旧数据被覆盖，导致漏统计的情况，修复：导出单项数量统计时的遗留bug 使用uuid.uuid1()作为键避免重名。

--- a/labs/test.ipynb
+++ b/labs/test.ipynb
@@ -2,16 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LINE <re.Match object; span=(0, 2), match='1.'>\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "'检查新加坡nginx启动用户，以及nginx目录下的临时文件，属主是否与启动用户一致'"
+       "'20221018'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -23,7 +30,122 @@
     "import os\n",
     "import copy\n",
     "import time\n",
-    "import re"
+    "import re\n",
+    "s1 = ' 1. 【资源管理】【BS:CBG Myhuawei[服务化中台-op]】服务化中台巡检'\n",
+    "print('LINE', re.match('\\s?\\d{1,2}\\.', s1.strip()))\n",
+    "\n",
+    "time.strftime('%Y%m%d',time.localtime())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'资源管理#123#sg#CBG Myhuawei#服务化中台#op#服务化中台巡检'"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "line = ' 1. 【资源管理-123】【sg:CBG Myhuawei[服务化中台-op]】服务化中台巡检'\n",
+    "re.sub(r'.*【([\\w、]*)-?(\\w*)】【(\\w{2})[:：]?([\\w\\s?]*)\\[?(\\w*)-?(\\w*)\\]?】(.*)', r'\\1#\\2#\\3#\\4#\\5#\\6#\\7', line).strip()\n",
+    "# [\"外部单号\",\"业务系统\",\"应用模块\",\"问题发现时间\",\"问题处理时长\",\"状态\",\"问题分类\",\"问题描述\",\"根因分析\",\"国家\",\"责任人\",\"备注\",\"问题大类\"]\n",
+    "#  问题分类 外部单号 国家 业务系统 应用模块 问题大类 问题描述"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "work in D:\\workspace\\20221018周二\n",
+      "source_encoding GB2312\n",
+      "   GB2312 D:\\workspace\\20221018周二\\工作日报20221018.txt\n",
+      "finish total: 1 success: 1 unkown_cnt 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# -*- encoding: utf-8 -*-\n",
+    "'''\n",
+    "@文件        :encoding_converter_tools.py\n",
+    "@说明        :\n",
+    "@时间        :2022/10/18 10:16:37\n",
+    "@作者        :awx1192780\n",
+    "@版本        :1.0\n",
+    "'''\n",
+    "\n",
+    "import codecs\n",
+    "import os\n",
+    "import sys\n",
+    "import shutil\n",
+    "import re\n",
+    "import chardet\n",
+    "\n",
+    "convertfiletypes = [\n",
+    "    \".txt\",\n",
+    "]\n",
+    "\n",
+    "\n",
+    "def check_need_convert(filename):\n",
+    "    for filetype in convertfiletypes:\n",
+    "        if filename.lower().endswith(filetype):\n",
+    "            return True\n",
+    "    return False\n",
+    "\n",
+    "\n",
+    "total_cnt = 0\n",
+    "success_cnt = 0\n",
+    "unkown_cnt = 0\n",
+    "\n",
+    "\n",
+    "def convert_encoding_to_utf_8(filename):\n",
+    "    global total_cnt, success_cnt, unkown_cnt\n",
+    "    # Backup the origin file.\n",
+    "    # convert file from the source encoding to target encoding\n",
+    "    content = codecs.open(filename, 'rb').read()\n",
+    "    source_encoding = chardet.detect(content)['encoding']\n",
+    "    print('source_encoding',source_encoding)\n",
+    "    total_cnt += 1\n",
+    "    if source_encoding == None:\n",
+    "        print(\"??\", filename)\n",
+    "        unkown_cnt += 1\n",
+    "        return\n",
+    "    print(\"  \", source_encoding, filename)\n",
+    "    if source_encoding != 'utf-8' and source_encoding != 'UTF-8-SIG':\n",
+    "        # .encode(source_encoding)\n",
+    "        content = content.decode(source_encoding, 'ignore')\n",
+    "        codecs.open(filename, 'w', encoding='UTF-8-SIG').write(content)\n",
+    "    success_cnt += 1\n",
+    "\n",
+    "\n",
+    "def convert_dir(root_dir):\n",
+    "    if os.path.exists(root_dir) == False:\n",
+    "        print(\"[error] DIR:\", root_dir, \"do not exit\")\n",
+    "        return\n",
+    "    print(\"work in\", convertdir)\n",
+    "    for root, dirs, files in os.walk(root_dir):\n",
+    "        for f in files:\n",
+    "            if check_need_convert(f):\n",
+    "                filename = os.path.join(root, f)\n",
+    "                try:\n",
+    "                    convert_encoding_to_utf_8(filename)\n",
+    "                except Exception as e:\n",
+    "                    print(\"WA\", filename, e)\n",
+    "    print(\"finish total:\", total_cnt, \"success:\",\n",
+    "          success_cnt, \"unkown_cnt\", unkown_cnt)\n",
+    "\n"
    ]
   },
   {
