调整、简化main函数，抽离出handler，更新统计功能的项目，当前与交付件的'问题分类'保持一致，统计功能加入'总计'项，其他细节调整

--- a/labs/test.ipynb
+++ b/labs/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -15,10 +15,10 @@
     {
      "data": {
       "text/plain": [
-       "'20221018'"
+       "'20221019'"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -39,16 +39,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'资源管理#123#sg#CBG Myhuawei#服务化中台#op#服务化中台巡检'"
+       "'资源管理#123#SG#CBG Myhuawei#服务化中台#op#asfasfa'"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
